eip.tf
# resource "aws_eip" "nfpoc_eip" {
#  tags = {
#     Name = "nfpoc_eip"
#   }
  
# }

#output "eip" {

#  value = aws_eip.nfpoc_eip.public_ip  
#}
