vpc.tf
resource "aws_vpc" "nfpoc" {
  cidr_block       = var.vpc_cidr
  enable_dns_support = true
  enable_dns_hostnames = true

  tags = {
    Name = "nfpoc_vpc"
  }
}
